--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "antd": "^4.24.1",
+    "firebase": "^9.14.0",
     "formik": "^2.2.9",
     "history": "^5.3.0",
+    "moment": "^2.29.4",
     "node-sass": "^7.0.3",
+    "rc-virtual-list": "^3.4.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
